@@ -67,7 +67,8 @@ neqn: $(top_srcdir)/src/preproc/eqn/neqn.sh $(SH_DEPS_SED_SCRIPT)
 	&& mv $@.tmp $@
 
 eqn_TESTS = \
-  src/preproc/eqn/tests/diagnostics-report-correct-line-numbers.sh
+  src/preproc/eqn/tests/diagnostics-report-correct-line-numbers.sh \
+  src/preproc/eqn/tests/parameters-can-be-set-and-reset.sh
 TESTS += $(eqn_TESTS)
 EXTRA_DIST += $(eqn_TESTS)
 
